Desktop app basically finished
(It's unusable, the web app should be used)